--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h2>Welcome, <span id="username">{{ username }}</span></h2>
+  <h2>User: <span id="username">{{ username }}</span></h2>
   <div class="container">
     <div class="sidebar">
       <div class="room-list">
