Rename id of div to store info about online users

--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="user-list">
         <h3>Online Users</h3>
-        <div id="active-users"></div>
+        <div id="online-users"></div>
       </div>
     </div>
     <div class="main-chat">
