--- a/src/app/templates/index.html
+++ b/src/app/templates/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </div>
-  <script src="{{ url_for('static', filename='chat.js') }}"></script>
+  <script src="{{ url_for('static', filename='index.js') }}"></script>
 </body>
 
 </html>
